# Solang-differential-testing-tool

./: Cargo.toml  build-and-run.sh  readme.md
solang-diff-contracts/: counter.sol
solang-diff-contracts/counter_rs/: Cargo.toml
solang-diff-contracts/counter_rs/src/: lib.rs
src/: main.rs
